--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
           <p class="project-title"><span class="code">&lt;</span> Google hledání <span class="code">&#47;&gt;</span></p>
         </a>
       </div>
+
+       <a href="https://davidkupka.github.io/Stupne1/" class="project project-tile" target="_blank" rel="noreferrer noopener">
+          <p class="project-title"><span class="code">&lt;</span> Převod stupnu <span class="code">&#47;&gt;</span></p>
+        </a>
+
+
       <div class="contact-section-header">
         <h2>Spolupracujme</h2>
         <p>Napiš mi — rád se domluvím</p>
