--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </section>
 
     <footer>
-      <p>&copy; 2025 David Kermes — Všechna práva vyhrazena.</p>
+      <p>&copy; 2025 David Kupka — Všechna práva vyhrazena.</p>
 
   
       <p>
