--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
           <p class="project-title"><span class="code">&lt;</span> Převod stupnu <span class="code">&#47;&gt;</span></p>
         </a>
 
+      
+       <a href="https://davidkupka.github.io/skupinova-prace1/" class="project project-tile" target="_blank" rel="noreferrer noopener">
+          <p class="project-title"><span class="code">&lt;</span> skupinova-prace1 <span class="code">&#47;&gt;</span></p>
+        </a>
+
+
           </div>
 
 
